--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="container">
             <div class="section-header">
                 <div class="section-badge">
-                    <i class="fas fa-th-large"></i>
+                    <i class="fas fa-utensils"></i>
                     <span>Our Products</span>
                 </div>
                 <h2>Our Product Categories</h2>
