--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="hero-slideshow">
                     <div class="slideshow-container">
                         <div class="slide active">
-                            <img src="https://images.unsplash.com/photo-1509440159596-0249088772ff?w=600&h=400&fit=crop" alt="Gluten Free Bread">
+                            <img src="https://ik.imagekit.io/tc7ehnijm/GFI_Banner1%20(1).png?w=600&h=400&fit=crop" alt="Gluten Free Bread">
                         </div>
                         <div class="slide">
                             <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?w=600&h=400&fit=crop" alt="Gluten Free Cakes">
