--- a/products.html
+++ b/products.html
@@ -55,6 +55,12 @@
                 </div>
             </div>
         </div>
+
+        <!-- Jump to Products Button (Mobile) -->
+        <button class="jump-to-products" id="jumpToProducts">
+            <i class="fas fa-arrow-down"></i>
+            <span>Jump to Products</span>
+        </button>
     </section>
 
     <!-- Footer -->
